// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should be able to import scss file with same name as package name 1`] = `
"body {
  background-color: blue;
}"
`;

exports[`should be able to transform directory imports (index files) 1`] = `
".directory {
  color: pink;
}"
`;

exports[`should be able to transform scss using package with exports 1`] = `
"span {
  color: pink;
}

body {
  color: orange;
}"
`;

exports[`should be able to transform scss using package with main field 1`] = `
".main {
  color: blue;
}"
`;

exports[`should be able to transform scss using package with sass fields 1`] = `
".main {
  color: green;
}"
`;

exports[`should be able to transform scss using package without exports and main fields 1`] = `
"html,
body {
  background-color: #12c344;
}

.bar {
  color: greenyellow;
}

.reset {
  color: inherit;
}"
`;

exports[`should be able to transform scss when package contains reference to itself 1`] = `
".self {
  color: inherit;
}"
`;

exports[`should be able to transform webpack like paths 1`] = `
"html,
body {
  background-color: #12c344;
}"
`;
